--- a/css/styles.css
+++ b/css/styles.css
@@ -10,33 +10,26 @@ section {
   background-color: #eaf4f4 !important;
 }
 
+.bg-dark {
+  background-color: #1F4949 !important;
+}
+
 /* Navigation Bar Styles */
 .navbar {
-  background-color: #1f4747 !important;
+  background-color: #1f4949 !important;
 }
 
-/* Button Styles */
-.button {
-  background: #7600ff;
-  color: #ffffff !important;
-  display: inline-block;
-  font-size: 15px;
-  font-weight: 500;
-  height: 50px;
-  line-height: 0.8;
-  padding: 18px 30px;
-  text-transform: capitalize;
-  border-radius: 1px;
-  letter-spacing: 0.5px;
-  border: 0px !important;
-  cursor: pointer;
-  border-radius: 100px;
+/* Card Styles */
+.card-img-top {
+  max-height: 100%;
+  width: auto;
+  float: left;
+  padding-right: 3rem;
 }
 
-.button:hover {
-  background: rgb(118, 0, 255);
-  color: #ffffff;
-  box-shadow: 0 10px 25px -2px rgba(118, 0, 255, 0.6);
+.card-price {
+  color: #2CA58D;
+  font-size: 2em;
 }
 
 /* Carousel Styles */
