--- a/css/styles.css
+++ b/css/styles.css
@@ -7,21 +7,83 @@ section {
   padding: 150px 0;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+body,
+.nav-item,
+.price,
+.product-tab {
+  font-family: "Playfair Display", "Lora", "Georgia", serif !important;
+}
+
+h1 {
+  font-size: 3.2rem !important;
+}
+
+h2 {
+  font-size: 2.1rem !important;
+}
+
+h3, .lead {
+  font-size: 1.3rem !important;
+}
+
+p {
+  font-size: 1.2rem !important;
+}
+
+.product-tab {
+  color: #277BA0;
+}
+
+.contact-info p {
+  font-size: 1.3rem;
+  color: #277BA0;
+}
+
 .bg-light {
-  background-color: #eaf4f4 !important;
+  background-color: #bfeee4 !important;
 }
 
 .bg-dark {
-  background-color: #1F4949 !important;
+  background-color: #1f4949 !important;
+}
+
+.product-tab {
+  font-size: 2.4rem !important;
+  font-weight: bold;
+  font-variant: small-caps;
 }
 
 .btn-primary {
-  background-color: #1F4949 !important;
+  font-size: 1.2rem !important;
+  background-color: #1f4949 !important;
+  color: #fffcf9 !important;
+  outline: #28b76d !important;
+}
+
+.btn-secondary {
+  color: #2ca58d;
 }
 
 /* Navigation Bar Styles */
 .navbar {
   background-color: #1f4949 !important;
+}
+
+.nav-link {
+  font-size: 2rem;
+  font-style: italic;
+  padding: 1em !important;
+}
+
+a.nav-link:hover,
+a.nav-link:active {
+  color: #2ca58d !important;
 }
 
 /* Card Styles */
@@ -33,20 +95,15 @@ section {
 }
 
 .card-price {
-  color: #2CA58D;
+  color: #277BA0;
   font-size: 2em;
 }
 
-/* Fancybox Styles */
-
-.fancybox-button--fullscreen::before {
-	width: 15px;
-	height: 11px;
-	left: calc(50% - 7px);
-	top: calc(50% - 6px);
-	border: 2px solid;
-	background: none;
+.card-title {
+  font-size: 1.5rem;
 }
+
+
 
 /* Carousel Styles */
 .carousel-item {
@@ -60,7 +117,22 @@ section {
 }
 
 .carousel-caption {
-  padding-bottom: 8%;
+  padding-bottom: 5%;
+}
+
+/* Error Validation */
+#field1Error,
+#field2Error,
+#field3Error,
+#field4Error,
+#submit {
+  display: none;
+}
+
+.spanError {
+  font-weight: 800;
+  color: red;
+  display: inline-block !important;
 }
 
 /* Product Grid Styles */
@@ -70,7 +142,6 @@ section {
 }
 
 .product-grid {
-  font-family: Poppins, sans-serif;
   text-align: center;
   border-radius: 5px;
   overflow: hidden;
@@ -236,15 +307,15 @@ section {
 }
 
 .product-grid .price {
-  color: #16a085;
-  font-size: 17px;
-  font-weight: 700;
+  color: #277BA0;
+  font-size: 1.5rem;
+  font-weight: 600;
   margin: 0 2px 15px 0;
   display: block;
 }
 
 .product-grid .price span {
-  color: #909090;
+  color: #277BA0;
   font-size: 13px;
   font-weight: 400;
   letter-spacing: 0;
